chore: WSC-1319 clean up code
* fix: check meeting participants list when last participant left